// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`evolve break_chained_methods=true: beautifiedText 1`] = `
foo.bar()
  .baz();
`;

exports[`evolve break_chained_methods=true: entity 1`] = `
Object {
  "options": Object {
    "beautifiers": Array [
      "JS-Beautify",
    ],
    "break_chained_methods": true,
    "indent_size": 2,
  },
}
`;

exports[`evolve break_chained_methods=true: fitness 1`] = `1`;

exports[`evolve break_chained_methods1: beautifiedText 1`] = `
this.$("#fileName")
  .val()
  .addClass("disabled")
  .prop("disabled", true)

`;

exports[`evolve break_chained_methods1: entity 1`] = `
Object {
  "options": Object {
    "beautifiers": Array [
      "Prettier",
    ],
    "end_with_semicolon": false,
  },
}
`;

exports[`evolve break_chained_methods1: fitness 1`] = `0`;

exports[`evolve break_chained_methods2: beautifiedText 1`] = `
this.$("#fileName").val().addClass("disabled")
  .prop("disabled", true)
`;

exports[`evolve break_chained_methods2: entity 1`] = `
Object {
  "options": Object {
    "beautifiers": Array [
      "Prettier",
    ],
    "pragma_require": true,
  },
}
`;

exports[`evolve break_chained_methods2: fitness 1`] = `0`;
